# cargo-templates

./: README.adoc  README.md  README_src.adoc  justfile
.github/workflows/: quick-check.yml
cli/: Cargo.toml  cargo-generate.toml
cli/src/: main.rs
lib/: README.md  justfile
parity-lib/: Cargo.toml  README.md  cargo-generate.toml
