[package]
authors = ["{{authors}}"]
name = "{{project-name}}"
version = "0.0.0"
edition = "2021"
description = "{{project-name}} is a cli"
homepage = "https://github.com/{{username}}/{{project-name}}"
keywords = ["{{username}}"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/{{username}}/{{project-name}}"

[dependencies]
assert_cmd = "2.0"
env_logger = "0.9"
log = "0.4"
clap = { version = "3.2", features = ["derive", "env", "unicode", "cargo"] }
