[package]
authors = ["{{authors}}"]
name = "{{project-name}}"
version = "0.0.0"
edition = "2021"
description = "{{project-name}} is a lib"
homepage = "https://github.com/paritytech/{{project-name}}"
keywords = ["paritytech"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/paritytech/{{project-name}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
